# MolElec-RS

./: .gitignore  Cargo.toml  README.md
.github/: install_openblas.bash
.github/workflows/: compile_and_run.yml  install_openblas.bash
data/basis/: 6-311++g.gbs  6-311++g_st_st.gbs  6-311+g_st.gbs  6-311g(d,p).gbs  6-311g.gbs  6-31g.gbs  cc-pvdz.gbs  cc-pvtz.gbs  def2-qzvp.gbs  def2-svp.gbs  def2-tzvp.gbs  def2-tzvpp.gbs  sto-3g.gbs  sto-6g.gbs
data/xyz/: acetonavo.xyz  acetone.xyz  ammoniak.xyz  calicheamicin_tinker_std.xtbopt.xyz  carbonmonoxide.xyz  furan.xyz  methan.xyz  methanol.xyz  water90.xyz  wrong_input.xyz
src/: main.rs
src/basisset/: mod.rs  parser.rs
src/calc_type/: guess.rs  mod.rs  rhf.rs  rhf_linscal.rs  uhf.rs
src/mol_int/: mod.rs
src/mol_int_and_deriv/: mod.rs  oe_int.rs  recurrence_rel.rs  te_int.rs
src/molecule/: atom.rs  cartesian_comp.rs  mod.rs
src/print_utils/: mod.rs  print_rhf.rs  print_scf.rs
