[package]
name = "MolElecRS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6", features = ["blas"] }
blas-src = { version = "0.9", features = ["openblas"] }
openblas-src = { version = "0.10.8", features = ["cblas", "system"] }
physical_constants = {version = "0.5.0"}