[package]
name = "MolElecRS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6", features = ["blas", "approx-0_5", "rayon"] }
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }
blas-src = { version = "0.9", features = ["openblas"] }
openblas-src = { version = "0.10.8", features = ["cblas", "system"] }
ndarray_einsum_beta = {version = "0.7.0"}
physical_constants = {version = "0.5.0"}
strum = "0.25.0"
strum_macros = "0.25.3"
lazy_static = "1.4.0"
approx = "0.5.1"
boys = "0.1.0"
getset = "0.1.2"
rayon = "1.8.0"


# [package.metadata.docs.rs]
# rustdoc-args = [
#     "--html-in-header",
#     ".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",

[profile.release]
lto = true
strip = true
